# OceanOpsClient

./: .gitignore  README.md  codemeta.json  pyproject.toml  requirements.txt
OceanOpsClient/: OceanOpsClient.py  __init__.py  config.py
docs/source/: API.rst  conf.py  index.rst  passport.rst  usage.rst
examples/: 0_initiate.py  1_pull_thornton_buoy.py  2_validate_passport.py  3_push_thornton_buoy.py  full_passport_example.json  passport_thornton_buoy.json
tests/: test_get_passport.py  test_init.py  test_ocean_ops.py  test_settings.py  test_validate_passport.py
tests/sources/: local_schema.json
