[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OceanOps"
version = "0.1.0"  # match your hardcoded __version__
authors = [{name = "Willem Boone", email = "willem.boone@vliz.be"}]

# Optional dependencies
[project.optional-dependencies]
docs = [
    "sphinx == 7.1.2",
    "sphinx-rtd-theme == 1.3.0rc1"
]
tests = ["pytest"]

# Dependencies from requirements.txt
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }